--- a/jhuan-portifolio/public/index.html
+++ b/jhuan-portifolio/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://images.vexels.com/media/users/3/301540/isolated/lists/c779cfd392bf0982cb53c6841a0c92cf-alfabeto-da-letra-j-gradiente.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Jhuan Souza</title>
+    <title>Jhuan de Souza</title>
   </head>
   <body>
     <noscript>Seu navegador não possui suporte a JavaScript.</noscript>
